Fix SI CSS
bottom shadow was prev cut off on About page

--- a/src/styles/modules/Social.module.css
+++ b/src/styles/modules/Social.module.css
@@ -1,6 +1,7 @@
 .socialIcon ul {
   padding-right: 20px;
   padding-left: 20px;
+  margin-bottom: 15px;
   text-align: center;
 }
 .socialIcon li {
